@@ -1,3 +1,7 @@
+2007-03-18 11:40 nick
+
+	* plugins/launcher/launcher.c: Fix insensitive button after adding items to the panel.
+
 2007-03-17 0:00  nick
 
 	* Improve the icons with some tango ones or the standard icon names. Also remove
